--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.0",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
     "ember-cli": "2.12.0",
@@ -42,6 +43,7 @@
   },
   "private": true,
   "dependencies": {
-    "ember-bulma": "^0.1.6"
+    "ember-bulma": "^0.1.6",
+    "ember-cli-sass": "^6.1.2"
   }
 }
